TestSuite/PascalABCTests/errors/err0271.pas
type TClass = static class
procedure Test;
begin
  writeln(2);
end;
end;

begin
  
end.